# Box

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  COMMAND_SUMMARY.md  DOCKER_CLI_AUDIT.md  Dockerfile  NEXT_STEPS.md  PLAN.md  README.md  RELEASE_NOTES_v0.8.0.md  RELEASE_SUMMARY.md  WINDOWS_INTEGRATION_TEST.md  justfile  plan.md
bench/: README.md  (+1 more)
sdk/python/: Cargo.toml  README.md  pyproject.toml
sdk/python/a3s_box/: __init__.py
sdk/python/src/: lib.rs  sandbox.rs  sdk.rs  types.rs
sdk/python/src/a3s_box/: __init__.py  _bridge_values.py  _sandbox_requests.py  client.py  code_interpreter.py  connection.py  exceptions.py  models.py  runtime.py  sandbox.py  script.py
sdk/python/tests/: test_sdk.py
src/: .env.example  .gitignore  Cargo.toml  PLAN.md
src/.cargo/: config.toml
src/api/src/handlers/: images.rs  system.rs
src/cli/: Cargo.toml  build.rs  justfile
src/cli/src/: boot.rs  cleanup.rs  health.rs  lib.rs  lifecycle.rs  log_archive.rs  main.rs  output.rs  process.rs  resolve.rs  state.rs  status.rs  test_helpers.rs
src/cli/src/commands/: attach.rs  attest.rs  audit.rs  build.rs  build_buildkit_vm.rs  commit.rs  common.rs  compose.rs  container_update.rs  cp.rs  create.rs  df.rs  diff.rs  events.rs  exec.rs  export.rs  history.rs  image_inspect.rs  image_prune.rs  image_tag.rs  images.rs  import.rs  info.rs  inject_secret.rs  inspect.rs  kill.rs  load.rs  logs.rs  mod.rs  monitor.rs  monitor_metrics.rs  monitor_service.rs  network.rs  pause.rs  pool.rs  port.rs  ps.rs  pull.rs  push.rs  rename.rs  (+19 more)
src/cli/src/state/: file.rs  lock.rs  mod.rs  policy.rs  tests.rs
src/cli/src/windows/: cache.rs
src/cli/tests/: command_coverage.rs  core_smoke.rs  host_smoke.rs  load_multi_platform.rs  nginx_integration.rs  tee_integration.rs  wait_integration.rs
src/cli/tests/support/: mod.rs
src/code/: Cargo.toml  README.md  build.rs  justfile
src/code/examples/: example_skill.md
src/code/proto/: agent.proto
src/code/src/: agent.rs  convert.rs  lib.rs  llm.rs  main.rs  permissions.rs  queue.rs  service.rs  session.rs  store.rs  tools.rs
src/code/src/hooks/: engine.rs  events.rs  matcher.rs  mod.rs
src/code/src/tools/: mod.rs  registry.rs  skill_loader.rs  types.rs
src/compat/: Cargo.toml
src/compat/migrations/: 0001_lifecycle_records.sql  0002_temporal_indexes.sql  0003_volume_records.sql  0004_snapshot_records.sql
src/compat/src/: digest.rs  exports.rs  fixture.rs  lib.rs  main.rs  model.rs  openapi.rs  proto.rs
src/compat/src/control/: credential.rs  lifetime.rs  memory.rs  mod.rs  model.rs  ports.rs  repository.rs  service.rs  service_tests.rs  supervisor.rs  supervisor_tests.rs  test_support.rs  tests.rs  token_keyring.rs  validation.rs
src/compat/src/envd/: connect.rs  file_tests.rs  files.rs  filesystem.rs  filesystem_tests.rs  mod.rs  process.rs  process_tests.rs  tests.rs
src/compat/src/gateway/: mod.rs  proxy.rs  tests.rs  tls.rs
src/compat/src/http/: account.rs  auth.rs  cursor.rs  dto.rs  error.rs  lifecycle.rs  logs.rs  mod.rs  router.rs  snapshots.rs  tests.rs  volume_content.rs  volumes.rs
src/compat/src/production/: config.rs  identity.rs  mod.rs  service.rs  template.rs  tests.rs
src/compat/src/routing/: lease.rs  mod.rs  parser.rs  policy.rs
src/compat/src/snapshot/: coordination.rs  memory.rs  mod.rs  model.rs  repository.rs  service.rs  sqlite.rs  template.rs
src/compat/src/volume/: memory.rs  mod.rs  model.rs  mount.rs  repository.rs  runtime.rs  service.rs  sqlite.rs
src/core/: Cargo.toml  justfile
src/core/src/: audit.rs  compose.rs  config.rs  context.rs  dns.rs  error.rs  event.rs  exec.rs  execution.rs  guest_boot.rs  guest_exec.rs  lib.rs  lifecycle_profile.rs  log.rs  network.rs  operator.rs  platform.rs  port.rs  pty.rs  queue.rs  rootfs_metadata.rs  security.rs  snapshot.rs  tee.rs  vmm.rs  volume.rs  windows_file.rs
src/core/src/compose/: acl.rs  diagnostic.rs  interpolation.rs  normalization.rs  normalized.rs  schema.rs
src/core/src/traits/: credential.rs  execution.rs  mod.rs  session.rs
src/core/tests/: compose_normalization.rs
src/cri/: Cargo.toml  build.rs
src/cri/src/: config_mapper.rs  container.rs  error.rs  image_service.rs  lib.rs  main.rs  persistent_store.rs  runtime_service.rs  sandbox.rs  server.rs  spdy.rs  state.rs  streaming.rs
src/cri/src/runtime_service/: convert.rs  mod.rs  service_ops.rs  tests.rs
src/guest/init/: Cargo.toml
src/guest/init/src/: attest_server.rs  cgroup.rs  exec_server.rs  lib.rs  listener.rs  main.rs  namespace.rs  network.rs  port_forward.rs  pty_server.rs  reaper.rs  rootfs_archive.rs  user.rs
src/netproxy/: Cargo.toml
src/netproxy/src/: device.rs  lib.rs  manager.rs  tests.rs
src/proto/: code_agent.proto
src/queue/: Cargo.toml  README.md  justfile
src/queue/src/: lib.rs  manager.rs  monitor.rs
src/runtime/: Cargo.toml  README.md  build.rs  justfile
src/runtime/examples/: managed_sandbox_smoke.rs
src/runtime/proto/: agent.proto
src/runtime/src/: audit.rs  box_record.rs  box_state.rs  compose.rs  file_lock.rs  fs.rs  grpc.rs  host_check.rs  lib.rs  log.rs  managed_execution_store.rs  metrics.rs  operator.rs  process.rs  prom.rs  resize.rs  resolved_image.rs  scale.rs  session.rs  skill.rs  snapshot.rs  vm.rs
src/runtime/src/a3s_runtime_driver/: conformance_tests.rs  exec.rs  exec_integration_tests.rs  lifecycle.rs  lifecycle_tests.rs  logs.rs  mapping.rs  metadata.rs  mod.rs  test_support.rs  tests.rs
src/runtime/src/backends/: hvf.rs  mod.rs  traits.rs
src/runtime/src/cache/: layer_cache.rs  mod.rs  rootfs_cache.rs
src/sdk/: Cargo.toml  README.md
src/sdk/python/: Cargo.toml  justfile  pyproject.toml
src/sdk/src/: box_state.rs  bridge.rs  lib.rs  options.rs  pipeline.rs  sandbox.rs  sdk.rs  shim_embed.rs
src/sdk/tests/: local_sandbox.rs  managed_lifecycle.rs
src/sdk/typescript/: Cargo.toml  index.d.ts  index.js  justfile  package-lock.json  package.json  tsconfig.json
src/shim/: Cargo.toml  build.rs
src/shim/src/: main.rs  windows_port_forward.rs
src/win-launcher/: Cargo.toml
(+309 files in other folders)
