[build-system]
requires = ["setuptools>=77,<81"]
build-backend = "setuptools.build_meta"

[project]
name = "a3s-box"
version = "3.0.11"
description = "Local-first Python SDK for A3S Box with E2B-like APIs"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "A3S Lab" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/A3S-Lab/Box"
Repository = "https://github.com/A3S-Lab/Box"
Issues = "https://github.com/A3S-Lab/Box/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
a3s_box = ["py.typed"]
