[package]
name = "a3s-box-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "a3s-box"
path = "src/main.rs"

[lib]
name = "a3s_box_cli"
path = "src/lib.rs"

[dependencies]
a3s-box-core = { path = "../core" }
a3s-box-runtime = { path = "../runtime" }
libkrun-sys = { path = "../deps/libkrun-sys" }

# Async runtime
tokio = { workspace = true }

# CLI
clap = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Time
chrono = { workspace = true }

# UUID
uuid = { workspace = true }

# System
dirs = { workspace = true }
libc = { workspace = true }

# Table formatting
comfy-table = { workspace = true }

# Self-update
a3s-updater = { workspace = true }

# Random (for name generation)
rand = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
