[package]
name = "a3s-box-compat"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Protocol compatibility service and contract fixtures for A3S Box"

[dependencies]
a3s-box-core = { version = "3.0", path = "../core" }
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
ring = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-rusqlite = { workspace = true }
url = { workspace = true }

[dev-dependencies]
hyper = { workspace = true }
tower = { workspace = true, features = ["util"] }

[[bin]]
name = "a3s-box-e2b-contract"
path = "src/main.rs"

[[bin]]
name = "a3s-box-e2b-fixture-server"
path = "src/bin/a3s-box-e2b-fixture-server.rs"
