[package]
name = "a3s-box-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "a3s_box_runtime"
path = "src/lib.rs"

[dependencies]
a3s-box-core = { path = "../core" }
libkrun-sys = { path = "../deps/libkrun-sys" }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Cryptography
sha2 = { workspace = true }
hex = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Time
chrono = { workspace = true }

# UUID
uuid = { workspace = true }

# Concurrency
parking_lot = { workspace = true }
dashmap = { workspace = true }

# System
libc = { workspace = true }
sysinfo = { workspace = true }
dirs = { workspace = true }

# OCI image support
oci-spec = "0.6"
oci-distribution = { workspace = true }
tar = "0.4"
flate2 = "1.0"

[dev-dependencies]
tempfile = { workspace = true }
