[package]
name = "a3s-box-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "MicroVM runtime engine — VM lifecycle, OCI images, attestation, networking"

[lib]
name = "a3s_box_runtime"
path = "src/lib.rs"

[[example]]
name = "managed-sandbox-smoke"
path = "examples/managed_sandbox_smoke.rs"
required-features = ["vm"]

[features]
default = ["vm", "pool", "scale", "compose", "operator", "build"]
vm = []
pool = ["vm"]
scale = []
compose = ["vm"]
operator = []
build = []

[dependencies]
a3s-box-core = { version = "3.0", path = "../core" }
a3s-transport = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Cryptography
sha2 = { workspace = true }
hex = { workspace = true }

# Image signature verification
p256 = { workspace = true }
x509-cert = { workspace = true }
der = { workspace = true }
spki = { workspace = true }
base64 = { workspace = true }

# HTTP client
reqwest = { workspace = true }
url = { workspace = true }
oci-reqwest = { package = "reqwest", version = "0.12", default-features = false, features = ["json", "stream"] }

# Time
chrono = { workspace = true }

# UUID
uuid = { workspace = true }

# Concurrency
parking_lot = { workspace = true }
dashmap = { workspace = true }

# System
libc = { workspace = true }
sysinfo = { workspace = true }
dirs = { workspace = true }

# OCI image support
oci-spec = "0.6"
oci-distribution = { workspace = true }
tar = "0.4"
flate2 = "1.0"
zstd = "0.13"

# Build support
tempfile = { workspace = true }

# Metrics
prometheus = { workspace = true }

# macOS userspace network proxy (replaces gvproxy)
[target.'cfg(target_os = "macos")'.dependencies]
a3s-box-netproxy = { version = "3.0", path = "../netproxy" }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.48", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
] }

[target.'cfg(unix)'.dependencies]
# Filesystem Snapshot fidelity
filetime = "0.2"
xattr = "1.6"

# TEE attestation verification
p384 = { workspace = true }
ecdsa = { workspace = true }

# RA-TLS (Remote Attestation TLS)
rcgen = { workspace = true }
rustls = { workspace = true }
tokio-rustls = { workspace = true }
rustls-pki-types = { workspace = true }

# Sealed storage
ring = { workspace = true }

# Extra Dockerfile ADD archive formats. These crates build C libraries, so they
# stay off Windows where .tar/.tar.gz remain supported without a C toolchain.
bzip2 = "0.5"
xz2 = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
a3s-runtime = { workspace = true }

[dev-dependencies]
axum = { workspace = true }
rand = { workspace = true }
tempfile = { workspace = true }
