[package]
name = "a3s-box-sdk-python"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "a3s_box"
crate-type = ["cdylib"]

[dependencies]
a3s-box-core = { path = "../../core" }
pyo3 = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
